DuPont DevSB/src/objects/pse__Time_Period__c.object
<CustomObject>
    <customHelpPage>pse__TimePeriodHelp</customHelpPage>
    <description>The divisions of time that your services organization is concerned with. Time periods have types such as Month (e.g. November 2014), Quarter (e.g. Q4 2014), Year (e.g. 2014), or Perpetual (‘All Time’). Time periods drive how actuals are categorized, how forecasting is done, how billing events are generated, and most other time-specific functions within FinancialForce PSA. Always create one perpetual time period with an end date well into the future.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>SemiMonthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Period</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Type__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Periods</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>pse__Time_Period_may_not_end_before_it_starts</fullName>
        <active>true</active>
        <errorConditionFormula>pse__Start_Date__c &gt; pse__End_Date__c</errorConditionFormula>
        <errorMessage>Time Period may not end before it starts</errorMessage>
    </validationRules>
</CustomObject>